// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<button
  class="ant-btn ant-btn-primary emotion-0"
  id="default"
  type="button"
>
  <span
    class="emotion-1"
  >
    default
  </span>
</button>
`;

exports[`Render properties.block: true - value[0] 1`] = `
<button
  class="ant-btn ant-btn-primary ant-btn-block emotion-0"
  id="properties.block: true"
  type="button"
>
  <span
    class="emotion-1"
  >
    properties.block: true
  </span>
</button>
`;

exports[`Render properties.color: #9c27b0 - value[0] 1`] = `
.emotion-0 {
  background-color: #9c27b0;
  border-color: #9c27b0;
}

.emotion-0:active {
  background-color: #75178a;
  border-color: #75178a;
}

.emotion-0:hover {
  background-color: #af48bd;
  border-color: #af48bd;
}

<button
  class="ant-btn ant-btn-primary emotion-0"
  id="properties.color: #9c27b0"
  type="button"
>
  <span
    class="emotion-1"
  >
    properties.color: #9c27b0
  </span>
</button>
`;

exports[`Render properties.danger: true - value[0] 1`] = `
<button
  class="ant-btn ant-btn-primary ant-btn-dangerous emotion-0"
  id="properties.danger: true"
  type="button"
>
  <span
    class="emotion-1"
  >
    properties.danger: true
  </span>
</button>
`;

exports[`Render properties.disabled: true - value[0] 1`] = `
<button
  class="ant-btn ant-btn-primary emotion-0"
  disabled=""
  id="properties.disabled: true"
  type="button"
>
  <span
    class="emotion-1"
  >
    properties.disabled: true
  </span>
</button>
`;

exports[`Render properties.ghost: true - value[0] 1`] = `
<button
  class="ant-btn ant-btn-primary ant-btn-background-ghost emotion-0"
  id="properties.ghost: true"
  type="button"
>
  <span
    class="emotion-1"
  >
    properties.ghost: true
  </span>
</button>
`;

exports[`Render properties.hideTitle: true - value[0] 1`] = `
<button
  class="ant-btn ant-btn-primary ant-btn-icon-only emotion-0"
  id="properties.hideTitle: true"
  type="button"
>
  <span
    aria-label="loading-3-quarters"
    class="anticon anticon-loading-3-quarters anticon-spin emotion-1"
    id="properties.hideTitle: true_icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="loading-3-quarters"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M512 1024c-69.1 0-136.2-13.5-199.3-40.2C251.7 958 197 921 150 874c-47-47-84-101.7-109.8-162.7C13.5 648.2 0 581.1 0 512c0-19.9 16.1-36 36-36s36 16.1 36 36c0 59.4 11.6 117 34.6 171.3 22.2 52.4 53.9 99.5 94.3 139.9 40.4 40.4 87.5 72.2 139.9 94.3C395 940.4 452.6 952 512 952c59.4 0 117-11.6 171.3-34.6 52.4-22.2 99.5-53.9 139.9-94.3 40.4-40.4 72.2-87.5 94.3-139.9C940.4 629 952 571.4 952 512c0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.2C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3s-13.5 136.2-40.2 199.3C958 772.3 921 827 874 874c-47 47-101.8 83.9-162.7 109.7-63.1 26.8-130.2 40.3-199.3 40.3z"
      />
    </svg>
  </span>
</button>
`;

exports[`Render properties.href: www.lowdefy.com - value[0] 1`] = `
<a
  class="ant-btn ant-btn-primary emotion-0"
  href="https://www.lowdefy.com"
  id="properties.href: www.lowdefy.com"
>
  <span
    class="emotion-1"
  >
    properties.href: www.lowdefy.com
  </span>
</a>
`;

exports[`Render properties.icon object - value[0] 1`] = `
<button
  class="ant-btn ant-btn-primary emotion-0"
  id="properties.icon object"
  type="button"
>
  <span
    aria-label="loading-3-quarters"
    class="anticon anticon-loading-3-quarters anticon-spin emotion-1"
    id="properties.icon object_icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="loading-3-quarters"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M512 1024c-69.1 0-136.2-13.5-199.3-40.2C251.7 958 197 921 150 874c-47-47-84-101.7-109.8-162.7C13.5 648.2 0 581.1 0 512c0-19.9 16.1-36 36-36s36 16.1 36 36c0 59.4 11.6 117 34.6 171.3 22.2 52.4 53.9 99.5 94.3 139.9 40.4 40.4 87.5 72.2 139.9 94.3C395 940.4 452.6 952 512 952c59.4 0 117-11.6 171.3-34.6 52.4-22.2 99.5-53.9 139.9-94.3 40.4-40.4 72.2-87.5 94.3-139.9C940.4 629 952 571.4 952 512c0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.2C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3s-13.5 136.2-40.2 199.3C958 772.3 921 827 874 874c-47 47-101.8 83.9-162.7 109.7-63.1 26.8-130.2 40.3-199.3 40.3z"
      />
    </svg>
  </span>
  <span
    class="emotion-1"
  >
    properties.icon object
  </span>
</button>
`;

exports[`Render properties.icon string - value[0] 1`] = `
<button
  class="ant-btn ant-btn-primary emotion-0"
  id="properties.icon string"
  type="button"
>
  <span
    aria-label="loading-3-quarters"
    class="anticon anticon-loading-3-quarters anticon-spin emotion-1"
    id="properties.icon string_icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="loading-3-quarters"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M512 1024c-69.1 0-136.2-13.5-199.3-40.2C251.7 958 197 921 150 874c-47-47-84-101.7-109.8-162.7C13.5 648.2 0 581.1 0 512c0-19.9 16.1-36 36-36s36 16.1 36 36c0 59.4 11.6 117 34.6 171.3 22.2 52.4 53.9 99.5 94.3 139.9 40.4 40.4 87.5 72.2 139.9 94.3C395 940.4 452.6 952 512 952c59.4 0 117-11.6 171.3-34.6 52.4-22.2 99.5-53.9 139.9-94.3 40.4-40.4 72.2-87.5 94.3-139.9C940.4 629 952 571.4 952 512c0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.2C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3s-13.5 136.2-40.2 199.3C958 772.3 921 827 874 874c-47 47-101.8 83.9-162.7 109.7-63.1 26.8-130.2 40.3-199.3 40.3z"
      />
    </svg>
  </span>
  <span
    class="emotion-1"
  >
    properties.icon string
  </span>
</button>
`;

exports[`Render properties.shape: circle - value[0] 1`] = `
<button
  class="ant-btn ant-btn-primary ant-btn-circle emotion-0"
  id="properties.shape: circle"
  type="button"
>
  <span
    class="emotion-1"
  >
    properties.shape: circle
  </span>
</button>
`;

exports[`Render properties.shape: round - value[0] 1`] = `
<button
  class="ant-btn ant-btn-primary ant-btn-round emotion-0"
  id="properties.shape: round"
  type="button"
>
  <span
    class="emotion-1"
  >
    properties.shape: round
  </span>
</button>
`;

exports[`Render properties.size: large - value[0] 1`] = `
<button
  class="ant-btn ant-btn-primary ant-btn-lg emotion-0"
  id="properties.size: large"
  type="button"
>
  <span
    class="emotion-1"
  >
    properties.size: large
  </span>
</button>
`;

exports[`Render properties.size: small - value[0] 1`] = `
<button
  class="ant-btn ant-btn-primary ant-btn-sm emotion-0"
  id="properties.size: small"
  type="button"
>
  <span
    class="emotion-1"
  >
    properties.size: small
  </span>
</button>
`;

exports[`Render properties.title - value[0] 1`] = `
<button
  class="ant-btn ant-btn-primary emotion-0"
  id="properties.title"
  type="button"
>
  <span
    class="emotion-1"
  >
    Button title
  </span>
</button>
`;

exports[`Render properties.type: danger - value[0] 1`] = `
<button
  class="ant-btn ant-btn-danger emotion-0"
  id="properties.type: danger"
  type="button"
>
  <span
    class="emotion-1"
  >
    properties.type: danger
  </span>
</button>
`;

exports[`Render properties.type: dashed - value[0] 1`] = `
<button
  class="ant-btn ant-btn-dashed emotion-0"
  id="properties.type: dashed"
  type="button"
>
  <span
    class="emotion-1"
  >
    properties.type: dashed
  </span>
</button>
`;

exports[`Render properties.type: default - value[0] 1`] = `
<button
  class="ant-btn emotion-0"
  id="properties.type: default"
  type="button"
>
  <span
    class="emotion-1"
  >
    properties.type: default
  </span>
</button>
`;

exports[`Render properties.type: link - value[0] 1`] = `
<button
  class="ant-btn ant-btn-link emotion-0"
  id="properties.type: link"
  type="button"
>
  <span
    class="emotion-1"
  >
    properties.type: link
  </span>
</button>
`;

exports[`Render properties.type: text - value[0] 1`] = `
<button
  class="ant-btn ant-btn-text emotion-0"
  id="properties.type: text"
  type="button"
>
  <span
    class="emotion-1"
  >
    properties.type: text
  </span>
</button>
`;

exports[`Render with html in title - value[0] 1`] = `
<button
  class="ant-btn ant-btn-primary emotion-0"
  id="with html in title"
  type="button"
>
  <span
    class="emotion-1"
  >
    <div
      style="color: orange;"
    >
      Title
    </div>
  </span>
</button>
`;

exports[`Render with html in title and icon - value[0] 1`] = `
<button
  class="ant-btn ant-btn-primary emotion-0"
  id="with html in title and icon"
  type="button"
>
  <span
    aria-label="loading-3-quarters"
    class="anticon anticon-loading-3-quarters anticon-spin emotion-1"
    id="with html in title and icon_icon"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="loading-3-quarters"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="0 0 1024 1024"
      width="1em"
    >
      <path
        d="M512 1024c-69.1 0-136.2-13.5-199.3-40.2C251.7 958 197 921 150 874c-47-47-84-101.7-109.8-162.7C13.5 648.2 0 581.1 0 512c0-19.9 16.1-36 36-36s36 16.1 36 36c0 59.4 11.6 117 34.6 171.3 22.2 52.4 53.9 99.5 94.3 139.9 40.4 40.4 87.5 72.2 139.9 94.3C395 940.4 452.6 952 512 952c59.4 0 117-11.6 171.3-34.6 52.4-22.2 99.5-53.9 139.9-94.3 40.4-40.4 72.2-87.5 94.3-139.9C940.4 629 952 571.4 952 512c0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.2C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3s-13.5 136.2-40.2 199.3C958 772.3 921 827 874 874c-47 47-101.8 83.9-162.7 109.7-63.1 26.8-130.2 40.3-199.3 40.3z"
      />
    </svg>
  </span>
  <span
    class="emotion-1"
  >
    <div
      style="color: red;"
    >
      Title
    </div>
  </span>
</button>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.block: true 1`] = `true`;

exports[`Test Schema properties.block: true 2`] = `null`;

exports[`Test Schema properties.color: #9c27b0 1`] = `true`;

exports[`Test Schema properties.color: #9c27b0 2`] = `null`;

exports[`Test Schema properties.danger: true 1`] = `true`;

exports[`Test Schema properties.danger: true 2`] = `null`;

exports[`Test Schema properties.disabled: true 1`] = `true`;

exports[`Test Schema properties.disabled: true 2`] = `null`;

exports[`Test Schema properties.ghost: true 1`] = `true`;

exports[`Test Schema properties.ghost: true 2`] = `null`;

exports[`Test Schema properties.hideTitle: true 1`] = `true`;

exports[`Test Schema properties.hideTitle: true 2`] = `null`;

exports[`Test Schema properties.href: www.lowdefy.com 1`] = `true`;

exports[`Test Schema properties.href: www.lowdefy.com 2`] = `null`;

exports[`Test Schema properties.icon object 1`] = `true`;

exports[`Test Schema properties.icon object 2`] = `null`;

exports[`Test Schema properties.icon string 1`] = `true`;

exports[`Test Schema properties.icon string 2`] = `null`;

exports[`Test Schema properties.shape: circle 1`] = `true`;

exports[`Test Schema properties.shape: circle 2`] = `null`;

exports[`Test Schema properties.shape: round 1`] = `true`;

exports[`Test Schema properties.shape: round 2`] = `null`;

exports[`Test Schema properties.size: large 1`] = `true`;

exports[`Test Schema properties.size: large 2`] = `null`;

exports[`Test Schema properties.size: small 1`] = `true`;

exports[`Test Schema properties.size: small 2`] = `null`;

exports[`Test Schema properties.title 1`] = `true`;

exports[`Test Schema properties.title 2`] = `null`;

exports[`Test Schema properties.type: danger 1`] = `true`;

exports[`Test Schema properties.type: danger 2`] = `null`;

exports[`Test Schema properties.type: dashed 1`] = `true`;

exports[`Test Schema properties.type: dashed 2`] = `null`;

exports[`Test Schema properties.type: default 1`] = `true`;

exports[`Test Schema properties.type: default 2`] = `null`;

exports[`Test Schema properties.type: link 1`] = `true`;

exports[`Test Schema properties.type: link 2`] = `null`;

exports[`Test Schema properties.type: text 1`] = `true`;

exports[`Test Schema properties.type: text 2`] = `null`;

exports[`Test Schema with html in title 1`] = `true`;

exports[`Test Schema with html in title 2`] = `null`;

exports[`Test Schema with html in title and icon 1`] = `true`;

exports[`Test Schema with html in title and icon 2`] = `null`;
